@@ -14,6 +14,7 @@ before_install:
     - "cpanm -n -q Dist::Zilla::Plugin::TravisCI::StatusBadge"
     - "cpanm -n -q Dist::Zilla::Plugin::Git"
     - "cpanm -n -q Dist::Zilla::Role::PluginBundle::PluginRemover"
+    - "cpanm -n -q Dist::Zilla::Plugin::GithubMeta"
 
 install:
     - "dzil authordeps -I lib | xargs cpanm -q -n && dzil listdeps -I lib | xargs cpanm -q -n"
