@@ -33,6 +33,7 @@ Dist::Zilla::Plugin::Test::NoTabs                   = 0.04
 Dist::Zilla::Plugin::TravisCI::StatusBadge          = 0.004
 Dist::Zilla::Plugin::Git                            = 2.023
 Dist::Zilla::Role::PluginBundle::PluginRemover      = 0.102
+Dist::Zilla::Plugin::GithubMeta                     = 0.46
 Moose                                               = 2.0
 Test::CPAN::Meta                                    = 0
 Pod::Coverage::TrustPod                             = 0
