@@ -4,6 +4,7 @@ Revision history for Perl extension Dist::Zilla::PluginBundle::Author::CHIM
 
     [ FEATURES ]
     - added remove plugins functionality (via PluginRemover)
+    - MetaResources replaced with GithubMeta
 
 0.051002 Fri Jul 18 06:33:43 2014 +0000
 
